{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 28,
  "lineage": "bbc63238-9b51-e654-8770-1883b43c4a92",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ssm_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-088103e734f7e0529",
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:instance/i-0525ce12c0537b946",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-sample-ssm-ec2-profile",
            "id": "i-0525ce12c0537b946",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0357ccf1b9f440b9b"
              }
            ],
            "primary_network_interface_id": "eni-0357ccf1b9f440b9b",
            "private_dns": "ip-10-0-1-200.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b9a36f924b070d6e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bfae1c28a2a5de1",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-ssm-worker",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-ssm-worker",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004eb95bdf207cd7e"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "i-0525ce12c0537b946",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance",
            "aws_iam_role.ssm_instance",
            "aws_security_group.ssm_instance",
            "aws_subnet.private_primary",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:security-group/sg-0012b61cb4aacd20a",
            "description": "Security group used by the App Runner VPC connector",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0012b61cb4aacd20a",
            "ingress": [],
            "name": "terraform-sample-apprunner-sg",
            "name_prefix": "",
            "owner_id": "471112594170",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-apprunner-sg",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-apprunner-sg",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "timeouts": null,
            "vpc_id": "vpc-07037d804e2d1e88e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "sg-0012b61cb4aacd20a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:security-group/sg-0c1f6125da15a256e",
            "description": "Allow PostgreSQL only from App Runner and SSM host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1f6125da15a256e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App Runner access on 5432",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0012b61cb4aacd20a"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "SSM EC2 access on 5432",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004eb95bdf207cd7e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-sample-rds-sg",
            "name_prefix": "",
            "owner_id": "471112594170",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-rds-sg",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-rds-sg",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "timeouts": null,
            "vpc_id": "vpc-07037d804e2d1e88e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "sg-0c1f6125da15a256e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.app_runner",
            "aws_security_group.ssm_instance",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:security-group/sg-004eb95bdf207cd7e",
            "description": "Session Manager EC2 host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004eb95bdf207cd7e",
            "ingress": [],
            "name": "terraform-sample-ssm-ec2-sg",
            "name_prefix": "",
            "owner_id": "471112594170",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-ssm-ec2-sg",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-ssm-ec2-sg",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "timeouts": null,
            "vpc_id": "vpc-07037d804e2d1e88e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "sg-004eb95bdf207cd7e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:security-group/sg-0aab6d9d9e5ebeed1",
            "description": "Allow HTTPS from inside the VPC to interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aab6d9d9e5ebeed1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "VPC endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-sample-endpoint-sg",
            "name_prefix": "",
            "owner_id": "471112594170",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-endpoint-sg",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-endpoint-sg",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "timeouts": null,
            "vpc_id": "vpc-07037d804e2d1e88e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "sg-0aab6d9d9e5ebeed1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:subnet/subnet-02bfae1c28a2a5de1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bfae1c28a2a5de1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112594170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-private-a",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-private-a",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "vpc_id": "vpc-07037d804e2d1e88e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "subnet-02bfae1c28a2a5de1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:subnet/subnet-05c8a5c86ba89a714",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c8a5c86ba89a714",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112594170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-private-c",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-private-c",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "vpc_id": "vpc-07037d804e2d1e88e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "subnet-05c8a5c86ba89a714",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:vpc/vpc-07037d804e2d1e88e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fdfea2009f2d6459",
            "default_route_table_id": "rtb-04be27e02b2b74bc2",
            "default_security_group_id": "sg-0bd92d4b2e7aeb134",
            "dhcp_options_id": "dopt-016f1d6dd1b1e5b66",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07037d804e2d1e88e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04be27e02b2b74bc2",
            "owner_id": "471112594170",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-vpc",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-vpc",
              "Owner": "you",
              "Project": "terraform-sample"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "vpc-07037d804e2d1e88e",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:vpc-endpoint/vpce-004b9d521823bb4fe",
            "dns_entry": [
              {
                "dns_name": "vpce-004b9d521823bb4fe-sj805ros.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-004b9d521823bb4fe-sj805ros-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-004b9d521823bb4fe-sj805ros-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z096016617SQ25430PZU1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-004b9d521823bb4fe",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0968e64a2aba90944",
              "eni-0abef30c317a08e7d"
            ],
            "owner_id": "471112594170",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aab6d9d9e5ebeed1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.242",
                "subnet_id": "subnet-02bfae1c28a2a5de1"
              },
              {
                "ipv4": "10.0.2.134",
                "subnet_id": "subnet-05c8a5c86ba89a714"
              }
            ],
            "subnet_ids": [
              "subnet-02bfae1c28a2a5de1",
              "subnet-05c8a5c86ba89a714"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-vpce-ec2messages",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-vpce-ec2messages",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07037d804e2d1e88e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "vpce-004b9d521823bb4fe",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_primary",
            "aws_subnet.private_secondary",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:vpc-endpoint/vpce-0b76df8ef0f91fe54",
            "dns_entry": [
              {
                "dns_name": "vpce-0b76df8ef0f91fe54-nxfc5773.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b76df8ef0f91fe54-nxfc5773-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b76df8ef0f91fe54-nxfc5773-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01153463CX5PR5DKBX8Z"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z09596242I0IW46YMLKZI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b76df8ef0f91fe54",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0802ac3bad9f19409",
              "eni-0e05830445286072f"
            ],
            "owner_id": "471112594170",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aab6d9d9e5ebeed1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.127",
                "subnet_id": "subnet-02bfae1c28a2a5de1"
              },
              {
                "ipv4": "10.0.2.89",
                "subnet_id": "subnet-05c8a5c86ba89a714"
              }
            ],
            "subnet_ids": [
              "subnet-02bfae1c28a2a5de1",
              "subnet-05c8a5c86ba89a714"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-vpce-ssm",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-vpce-ssm",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07037d804e2d1e88e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "vpce-0b76df8ef0f91fe54",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_primary",
            "aws_subnet.private_secondary",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112594170:vpc-endpoint/vpce-0dee813ba12c14194",
            "dns_entry": [
              {
                "dns_name": "vpce-0dee813ba12c14194-tkw80wbr.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0dee813ba12c14194-tkw80wbr-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0dee813ba12c14194-tkw80wbr-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z011715114QAQQD1AON7Y"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z01159561JJ6KZG1ZW6CV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dee813ba12c14194",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-004506e6ff37bf306",
              "eni-0f66df35c556c4c93"
            ],
            "owner_id": "471112594170",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aab6d9d9e5ebeed1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.172",
                "subnet_id": "subnet-02bfae1c28a2a5de1"
              },
              {
                "ipv4": "10.0.2.45",
                "subnet_id": "subnet-05c8a5c86ba89a714"
              }
            ],
            "subnet_ids": [
              "subnet-02bfae1c28a2a5de1",
              "subnet-05c8a5c86ba89a714"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-sample-vpce-ssmmessages",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-sample-vpce-ssmmessages",
              "Owner": "you",
              "Project": "terraform-sample"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07037d804e2d1e88e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112594170",
            "id": "vpce-0dee813ba12c14194",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_primary",
            "aws_subnet.private_secondary",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}